--- a/style.css
+++ b/style.css
@@ -2,8 +2,65 @@ html,
 body {
     margin: 0;
     padding: 0;
+    margin-left: 10%;
 }
 
 canvas {
     display: block;
+}
+
+textarea {
+    border: none;
+    /* 테두리 제거 */
+    outline: none;
+    /* 포커스 시 외곽선 제거 */
+    background: transparent;
+    /* 배경 투명하게 설정 */
+    color: inherit;
+    /* 글자 색상 상속 */
+    font-size: 16px;
+    /* 텍스트 크기 설정 */
+    font-family: inherit;
+    /* 글꼴 상속 */
+    padding: 0;
+    /* 패딩 제거 */
+    resize: none;
+    /* 크기 조정 비활성화 */
+    overflow: hidden;
+    /* 스크롤바 제거 */
+    width: 100%;
+    /* 너비 100% */
+    height: 16px;
+    /* 자동 높이 설정 */
+    line-height: 1.2;
+    /* 줄 간격 설정 */
+    margin: 0;
+    cursor: default;
+    /* 커서를 기본 상태로 설정 */
+}
+
+.arrow-down {
+    width: 0;
+    font-size: 15px;
+    color: black;
+    height: 15px;
+    /* 화살표 색상 (검정색) */
+    margin-left: 50px;
+    padding-bottom: 20px;
+}
+
+h1 {
+    margin-left: 5px;
+}
+
+h2 {
+    margin-left: 10px;
+}
+
+h3 {
+    margin-left: 15px;
+}
+
+h4 {
+    margin-left: 20px;
 }
